--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1118,15 +1118,145 @@ a {
   height: 2px;
   margin: 0 auto;
 }
-.cid-tuvbzrBIKe {
+.cid-tuzWnLbTaz {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-tuzWnLbTaz img,
+.cid-tuzWnLbTaz .item-img {
+  height: 100%;
+  object-fit: cover;
+}
+.cid-tuzWnLbTaz .item:focus,
+.cid-tuzWnLbTaz span:focus {
+  outline: none;
+}
+.cid-tuzWnLbTaz .item-wrapper {
+  position: relative;
+}
+.cid-tuzWnLbTaz .slide-content {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  overflow: hidden;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tuzWnLbTaz .slide-content .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tuzWnLbTaz .slide-content .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tuzWnLbTaz .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tuzWnLbTaz .mbr-section-title {
+  color: #232323;
+}
+.cid-tuzWnLbTaz .mbr-text,
+.cid-tuzWnLbTaz .mbr-section-btn {
+  text-align: center;
+}
+.cid-tuzWnLbTaz .item-title {
+  text-align: center;
+}
+.cid-tuzWnLbTaz .item-subtitle {
+  text-align: center;
+  color: #232323;
+}
+.cid-tuzWnLbTaz .embla__slide {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  min-width: 410px;
+  max-width: 410px;
+}
+@media (max-width: 768px) {
+  .cid-tuzWnLbTaz .embla__slide {
+    min-width: 70%;
+    max-width: initial;
+    margin-left: 1rem !important;
+    margin-right: 1rem !important;
+  }
+}
+.cid-tuzWnLbTaz .embla__button--next,
+.cid-tuzWnLbTaz .embla__button--prev {
+  display: flex;
+}
+.cid-tuzWnLbTaz .embla__button {
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cid-tuzWnLbTaz .embla__button:disabled {
+  cursor: default;
+  display: none;
+}
+.cid-tuzWnLbTaz .embla__button:hover {
+  background: #000;
+  color: rgba(255, 255, 255, 0.5);
+}
+.cid-tuzWnLbTaz .embla__button.embla__button--prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-tuzWnLbTaz .embla__button.embla__button--next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 767px) {
+  .cid-tuzWnLbTaz .embla__button {
+    top: auto;
+  }
+}
+.cid-tuzWnLbTaz .embla {
+  position: relative;
+  width: 100%;
+}
+.cid-tuzWnLbTaz .embla__viewport {
+  overflow: hidden;
+  width: 100%;
+}
+.cid-tuzWnLbTaz .embla__viewport.is-draggable {
+  cursor: grab;
+}
+.cid-tuzWnLbTaz .embla__viewport.is-dragging {
+  cursor: grabbing;
+}
+.cid-tuzWnLbTaz .embla__container {
+  display: flex;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -webkit-tap-highlight-color: transparent;
+}
+.cid-tuA7du33YV {
   padding-top: 0rem;
   padding-bottom: 0rem;
   background-color: #ffffff;
 }
-.cid-tuvbzrBIKe .mbr-fallback-image.disabled {
+.cid-tuA7du33YV .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-tuvbzrBIKe .mbr-fallback-image {
+.cid-tuA7du33YV .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -1135,256 +1265,143 @@ a {
   position: absolute;
   top: 0;
 }
-.cid-tuvbzrBIKe .item {
-  padding-bottom: 2rem;
-}
-.cid-tuvbzrBIKe .item-wrapper {
-  position: relative;
-}
-.cid-tuvbzrBIKe .item-wrapper .icon-wrapper {
-  pointer-events: none;
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  font-size: 22px;
-  left: 50%;
-  top: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 2px solid #ffffff;
+.cid-tuA7du33YV .image-wrapper {
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
-  opacity: 0;
-  color: #ffffff;
-  transform: translateX(-50%) translateY(-50%);
-  background-color: #1b1b1b;
-  transition: 0.2s;
-}
-.cid-tuvbzrBIKe .item-wrapper:hover .icon-wrapper {
-  opacity: 0.7;
-}
-.cid-tuvbzrBIKe .carousel-control,
-.cid-tuvbzrBIKe .close {
-  background: #1b1b1b;
-}
-.cid-tuvbzrBIKe .carousel-control-prev {
-  margin-left: 2.5rem;
-}
-.cid-tuvbzrBIKe .carousel-control-prev span {
-  margin-right: 5px;
-}
-.cid-tuvbzrBIKe .carousel-control-next {
-  margin-right: 2.5rem;
-}
-.cid-tuvbzrBIKe .carousel-control-next span {
-  margin-left: 5px;
-}
-.cid-tuvbzrBIKe .close {
-  position: fixed;
-  opacity: 0.5;
-  font-size: 22px;
-  font-weight: 300;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  color: #fff;
-  top: 2.5rem;
-  right: 2.5rem;
-  border: 2px solid #fff;
-  text-shadow: none;
-  z-index: 5;
-  transition: opacity 0.3s ease;
-  font-family: 'Moririse2';
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-.cid-tuvbzrBIKe .close::before {
-  content: '\e91a';
-}
-.cid-tuvbzrBIKe .close:hover {
-  opacity: 1;
-  background: #000;
-  color: #fff;
-}
-.cid-tuvbzrBIKe .carousel-control {
-  display: flex;
-  top: 50%;
-  width: 60px;
-  height: 60px;
-  margin-top: -1.5rem;
-  font-size: 22px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all 0.3s;
-}
-.cid-tuvbzrBIKe .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-tuvbzrBIKe .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-@media (max-width: 767px) {
-  .cid-tuvbzrBIKe .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-tuvbzrBIKe .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 3px;
-}
-.cid-tuvbzrBIKe .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  width: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: 0.5;
-  transition: all 0.3s;
-}
-.cid-tuvbzrBIKe .carousel-indicators li.active,
-.cid-tuvbzrBIKe .carousel-indicators li:hover {
-  opacity: 0.9;
-}
-.cid-tuvbzrBIKe .carousel-indicators li::after,
-.cid-tuvbzrBIKe .carousel-indicators li::before {
-  content: none;
-}
-.cid-tuvbzrBIKe .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 768px) {
-  .cid-tuvbzrBIKe .carousel-indicators {
-    display: none !important;
-  }
-}
-@media (max-width: 991px) {
-  .cid-tuvbzrBIKe .carousel-indicators {
-    margin-bottom: 3.625rem !important;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-tuvbzrBIKe .carousel-indicators {
-    display: none;
-  }
-}
-.cid-tuvbzrBIKe .carousel-inner {
-  display: flex;
-  align-items: center;
-}
-.cid-tuvbzrBIKe .carousel-inner > .active {
-  display: block;
-}
-.cid-tuvbzrBIKe .carousel-control.left {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-tuvbzrBIKe .carousel-control.right {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-tuvbzrBIKe .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-@media (max-width: 768px) {
-  .cid-tuvbzrBIKe .carousel-control,
-  .cid-tuvbzrBIKe .carousel-indicators,
-  .cid-tuvbzrBIKe .modal .close {
-    position: fixed;
-  }
-}
-@media (max-width: 767px) {
-  .cid-tuvbzrBIKe .mbr-slider .carousel-control {
-    top: auto;
-    bottom: 20px;
-  }
-  .cid-tuvbzrBIKe .mbr-slider > .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-tuvbzrBIKe .carousel-indicators .active,
-.cid-tuvbzrBIKe .carousel-indicators li {
-  width: 7px;
-  height: 7px;
-  margin: 3px;
-  background: #000000;
-  opacity: 0.5;
-  border: 4px solid #000000;
-}
-.cid-tuvbzrBIKe .carousel-indicators .active {
-  background: #fff;
-}
-.cid-tuvbzrBIKe .carousel-indicators li {
-  max-width: 15px;
-  max-height: 15px;
-  border-radius: 50%;
-}
-.cid-tuvbzrBIKe .modal {
-  padding-left: 0 !important;
-  position: fixed;
+  margin-top: 5px;
+  margin-right: 1rem;
   overflow: hidden;
-  padding-right: 0 !important;
 }
-.cid-tuvbzrBIKe .modal-dialog {
-  margin: 0 auto;
-  max-width: 100%;
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.cid-tuvbzrBIKe .modal-content {
-  border-radius: 0;
-  border: none;
-  background: transparent;
-}
-.cid-tuvbzrBIKe .modal-body {
-  padding: 0;
-  display: flex;
-  align-items: center;
-}
-.cid-tuvbzrBIKe .modal-body img {
+.cid-tuA7du33YV .image-wrapper img {
+  height: 100%;
   width: 100%;
-  object-fit: contain;
-  max-height: calc(100vh - 1.75rem);
+  object-fit: cover;
 }
-.cid-tuvbzrBIKe .carousel {
+.cid-tuA94zBJkJ {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-tuA94zBJkJ .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tuA94zBJkJ .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
   width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
 }
-.cid-tuvbzrBIKe .modal-backdrop.in {
-  opacity: 0.8;
+.cid-tuA94zBJkJ .image-wrapper {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-top: 5px;
+  margin-right: 1rem;
+  overflow: hidden;
 }
-.cid-tuvbzrBIKe .modal.fade .modal-dialog {
-  transition: margin-top 0.3s ease-out;
-}
-.cid-tuvbzrBIKe .modal.fade .modal-dialog,
-.cid-tuvbzrBIKe .modal.in .modal-dialog {
-  transform: none;
-}
-.cid-tuvbzrBIKe .mbr-gallery .item-wrapper {
-  cursor: pointer;
-}
-.cid-tuvbzrBIKe H6 {
-  text-align: center;
+.cid-tuA94zBJkJ .image-wrapper img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 .cid-tuvd1ap0hx {
   padding-top: 2rem;
   padding-bottom: 2rem;
   background-color: #ffffff;
+}
+.cid-tuA54sz9Oz {
+  padding-top: 75px;
+  padding-bottom: 75px;
+  background-color: #7a3210;
+}
+@media (max-width: 767px) {
+  .cid-tuA54sz9Oz .content {
+    text-align: center;
+  }
+  .cid-tuA54sz9Oz .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+.cid-tuA54sz9Oz .map {
+  height: 18.75rem;
+}
+@media (max-width: 767px) {
+  .cid-tuA54sz9Oz .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-tuA54sz9Oz .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: 0.05;
+}
+.cid-tuA54sz9Oz .google-map {
+  height: 25rem;
+  position: relative;
+}
+.cid-tuA54sz9Oz .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-tuA54sz9Oz .google-map [data-state-details] {
+  color: #6b6763;
+  font-family: Montserrat;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-tuA54sz9Oz .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-tuA54sz9Oz .google-map[data-state="loading"] [data-state-details] {
+  display: none;
+}
+.cid-tuA54sz9Oz .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  margin-left: -7px;
+  list-style: none;
+  display: flex;
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.cid-tuA54sz9Oz .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-tuA54sz9Oz .social-list .soc-item {
+  margin: 0 0.5rem;
+}
+.cid-tuA54sz9Oz .social-list a {
+  margin: 0;
+  opacity: 0.5;
+  -webkit-transition: 0.2s linear;
+  transition: 0.2s linear;
+}
+.cid-tuA54sz9Oz .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-tuA54sz9Oz .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-tuA54sz9Oz .list {
+  list-style-type: none;
+  padding: 0;
 }
 .cid-tux1f5soDB {
   padding-top: 0rem;
@@ -1476,6 +1493,86 @@ a {
 }
 .cid-tux1Hpumwv P {
   color: #ffffff;
+}
+.cid-tuA3zxeSmF {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
+.cid-tuA3zxeSmF blockquote {
+  border-color: #e97802;
+  border-radius: 4px;
+  background-color: #fafafa;
+}
+.cid-tuA3zxeSmF .mbr-text {
+  color: #7a3210;
+}
+.cid-tuzUT8svOs {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background: #fafafa;
+}
+.cid-tuzUT8svOs .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tuzUT8svOs .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tuzUT8svOs .list-group-item {
+  background-color: transparent;
+  padding: .5rem 3.25rem;
+}
+.cid-tuzUT8svOs .plan-body {
+  padding-bottom: 2rem;
+}
+.cid-tuzUT8svOs .plan-header {
+  padding-top: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.cid-tuzUT8svOs .price {
+  color: #e97802;
+}
+.cid-tuzUT8svOs .plan {
+  word-break: break-word;
+  background-color: #ffffff;
+}
+.cid-tuzUT8svOs .plan .list-group-item {
+  position: relative;
+  justify-content: center;
+  border: 0;
+}
+.cid-tuzUT8svOs .plan .list-group-item::after {
+  position: absolute;
+  bottom: 1px;
+  left: 25%;
+  width: 50%;
+  height: 1px;
+  content: "";
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.cid-tuzUT8svOs .plan .list-group-item:last-child::after {
+  display: none;
+}
+@media (max-width: 991px) {
+  .cid-tuzUT8svOs .plan {
+    margin-bottom: 2rem;
+  }
+}
+.cid-tuzUT8svOs UL {
+  color: #e97802;
+}
+.cid-tuzUT8svOs .price-term {
+  color: #7a3210;
+}
+.cid-tuzUT8svOs .plan-title {
+  color: #7a3210;
 }
 .cid-tuv7SiChYf .navbar-dropdown {
   position: relative !important;
@@ -1838,57 +1935,93 @@ a {
     left: -1rem;
   }
 }
-.cid-tuvdmhgeyo {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-  background-color: #ffffff;
+.cid-tuA54sz9Oz {
+  padding-top: 75px;
+  padding-bottom: 75px;
+  background-color: #7a3210;
 }
-.cid-tuvdmhgeyo img,
-.cid-tuvdmhgeyo .item-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+@media (max-width: 767px) {
+  .cid-tuA54sz9Oz .content {
+    text-align: center;
+  }
+  .cid-tuA54sz9Oz .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
 }
-.cid-tuvdmhgeyo .item:focus,
-.cid-tuvdmhgeyo span:focus {
-  outline: none;
+.cid-tuA54sz9Oz .map {
+  height: 18.75rem;
 }
-.cid-tuvdmhgeyo .item {
-  cursor: pointer;
-  margin-bottom: 2rem;
+@media (max-width: 767px) {
+  .cid-tuA54sz9Oz .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
 }
-.cid-tuvdmhgeyo .item-wrapper {
+.cid-tuA54sz9Oz .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: 0.05;
+}
+.cid-tuA54sz9Oz .google-map {
+  height: 25rem;
   position: relative;
-  border-radius: 4px;
-  background: #e97802;
+}
+.cid-tuA54sz9Oz .google-map iframe {
   height: 100%;
+  width: 100%;
+}
+.cid-tuA54sz9Oz .google-map [data-state-details] {
+  color: #6b6763;
+  font-family: Montserrat;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-tuA54sz9Oz .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-tuA54sz9Oz .google-map[data-state="loading"] [data-state-details] {
+  display: none;
+}
+.cid-tuA54sz9Oz .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  margin-left: -7px;
+  list-style: none;
   display: flex;
-  flex-flow: column nowrap;
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
 }
-@media (min-width: 992px) {
-  .cid-tuvdmhgeyo .item-wrapper .item-content {
-    padding: 2rem;
+.cid-tuA54sz9Oz .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-tuA54sz9Oz .social-list .soc-item {
+  margin: 0 0.5rem;
+}
+.cid-tuA54sz9Oz .social-list a {
+  margin: 0;
+  opacity: 0.5;
+  -webkit-transition: 0.2s linear;
+  transition: 0.2s linear;
+}
+.cid-tuA54sz9Oz .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-tuA54sz9Oz .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
   }
 }
-@media (max-width: 991px) {
-  .cid-tuvdmhgeyo .item-wrapper .item-content {
-    padding: 1rem;
-  }
-}
-.cid-tuvdmhgeyo .mbr-section-btn {
-  margin-top: auto !important;
-}
-.cid-tuvdmhgeyo .mbr-section-title {
-  color: #232323;
-}
-.cid-tuvdmhgeyo .mbr-text,
-.cid-tuvdmhgeyo .mbr-section-btn {
-  text-align: left;
-}
-.cid-tuvdmhgeyo .item-title {
-  text-align: left;
-}
-.cid-tuvdmhgeyo .item-subtitle {
-  text-align: left;
-  color: #bbbbbb;
+.cid-tuA54sz9Oz .list {
+  list-style-type: none;
+  padding: 0;
 }
