--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1121,7 +1121,7 @@ a {
 .cid-tuzWnLbTaz {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background-color: #ffffff;
+  background-color: #e97802;
 }
 .cid-tuzWnLbTaz img,
 .cid-tuzWnLbTaz .item-img {
@@ -1138,7 +1138,7 @@ a {
 .cid-tuzWnLbTaz .slide-content {
   position: relative;
   border-radius: 4px;
-  background: #fafafa;
+  background: #ffffff;
   height: 100%;
   display: flex;
   overflow: hidden;
@@ -1249,7 +1249,7 @@ a {
   -webkit-tap-highlight-color: transparent;
 }
 .cid-tuA7du33YV {
-  padding-top: 0rem;
+  padding-top: 2rem;
   padding-bottom: 0rem;
   background-color: #ffffff;
 }
